syntax = "proto3";

package com.weuoimi.grpc.user.service;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

// User Service definition for the user_service microservice
service UserService {
  rpc registerUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc loginUser (LoginUserRequest) returns (LoginUserResponse);
  rpc getUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc updateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc deleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

// User data message
message User {
  string id = 1;
  string email = 2;
  string password = 3;
  string firstName = 4;
  string lastName = 5;
  string phoneNumber = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

// Request and response for registering a user
message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string phoneNumber = 5;
}

message RegisterUserResponse {
  User user = 1;
}

// Request and response for logging in a user
message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string token = 2;  // JWT or session token
}

// Request and response for getting user by ID
message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

// Request and response for updating a user
message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phoneNumber = 5;
}

message UpdateUserResponse {
  User user = 1;
}

// Request and response for deleting a user
message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  google.protobuf.BoolValue success = 1;
}
